--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.url=jdbc:mysql://localhost:3306/betapp?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/betapp?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://bucketdev.site:3306/betapp-bucketdev?serverTimezone=UTC
+#spring.datasource.username=root
+spring.datasource.username=betapp
+#spring.datasource.password=root
+spring.datasource.password=cwf9yddkti99
 
 spring.jackson.time-zone = America/Mexico_City
 spring.jackson.locale = es_MX
