--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/betapp?useLegacyDatetimeCode=false
-spring.datasource.url=jdbc:mysql://bucketdev.site:3306/betapp-bucketdev?useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://bucketdev.site:3306/betapp-bucketdev?useLegacyDatetimeCode=false&autoReconnect=true
 #spring.datasource.username=root
 spring.datasource.username=betapp
 #spring.datasource.password=root
