--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -73,6 +77,7 @@
 			<artifactId>firebase-admin</artifactId>
 			<version>6.10.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
